[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/PasswordForm.gd" type="Script" id=1]
[ext_resource path="res://assets/icon_GUI_visibility_visible.svg" type="Texture" id=2]
[ext_resource path="res://assets/icon_GUI_visibility_hidden.svg" type="Texture" id=3]

[node name="PasswordForm" type="VBoxContainer"]
margin_left = 320.0
margin_top = 220.0
margin_right = 703.0
margin_bottom = 318.0
custom_constants/separation = 20
script = ExtResource( 1 )

[node name="Filename" type="Label" parent="."]
margin_right = 387.0
margin_bottom = 14.0
text = "Filename"

[node name="HBox" type="HBoxContainer" parent="."]
margin_top = 34.0
margin_right = 387.0
margin_bottom = 58.0

[node name="Password" type="LineEdit" parent="HBox"]
margin_right = 300.0
margin_bottom = 24.0
rect_min_size = Vector2( 300, 0 )
secret = true
placeholder_text = "Password"

[node name="Visible" type="TextureButton" parent="HBox"]
visible = false
margin_left = 62.0
margin_right = 78.0
margin_bottom = 24.0
texture_normal = ExtResource( 2 )

[node name="Hidden" type="TextureButton" parent="HBox"]
margin_left = 304.0
margin_right = 320.0
margin_bottom = 24.0
texture_normal = ExtResource( 3 )

[node name="Spacer" type="Control" parent="HBox"]
margin_left = 324.0
margin_right = 334.0
margin_bottom = 24.0
rect_min_size = Vector2( 10, 0 )

[node name="Enter" type="Button" parent="HBox"]
margin_left = 338.0
margin_right = 383.0
margin_bottom = 24.0
text = "Enter"

[node name="HBox" type="HBoxContainer" parent="HBox"]
margin_left = 387.0
margin_right = 387.0
margin_bottom = 24.0
custom_constants/separation = 20

[node name="Browse" type="Button" parent="."]
margin_top = 78.0
margin_right = 387.0
margin_bottom = 98.0
text = "Choose File"

[connection signal="text_changed" from="HBox/Password" to="." method="_on_Password_text_changed"]
[connection signal="pressed" from="HBox/Visible" to="." method="_on_Visible_pressed"]
[connection signal="pressed" from="HBox/Hidden" to="." method="_on_Hidden_pressed"]
[connection signal="pressed" from="HBox/Enter" to="." method="_on_Enter_pressed"]
[connection signal="pressed" from="Browse" to="." method="_on_Browse_pressed"]
